# ipydrawio

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  ROADMAP.md  dodo.py  environment.yml  overrides.json  package.json  setup.cfg
.binder/: environment.yml  overrides.json  postBuild
.github/: environment-conda-build.yml  environment.yml  pip-build.txt
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md
.github/workflows/: ci.yml
atest/: Advanced Create.robot  Custom.robot  Formats.robot  Media.robot  Settings.robot  Smoke.robot  Widget.robot  _CodeMirror.robot  _Keywords.robot  _Notebook.robot  _Variables.robot  __init__.robot  pdf.py  ports.py
atest/examples/: A.dio  Rich Display.ipynb
atest/fixtures/: jupyter_notebook_config.json  test.dio
binder/: environment.yml
conda.recipe/: meta.yaml
docs/: Diagram Document.ipynb  Diagram Rich Display.ipynb  Diagram Widget.ipynb  ROADMAP.dio.ipynb  ROADMAP.ipynb  conf.py  environment.yml  index.md
docs/_static/: theme.css
docs/about/: changelog.md  contributing.md  index.md
docs/api/: index.md  schema.rst  widgets.rst
docs/diagrams/: index.md
notebooks/: Data-Driven Decks.ipynb  Diagram Notebook.dio.ipynb  Notebook to Diagram.ipynb
notebooks/_meta/: Schema Updater.ipynb
py_packages/ipydrawio/: MANIFEST.in  README.md  setup.cfg  setup.py
py_packages/ipydrawio-export/: MANIFEST.in  README.md  install.json  setup.cfg  setup.py
py_packages/ipydrawio-export/src/ipydrawio_export/: __init__.py  _version.py  app.py  constants.py  handlers.py  manager.py  serverextension.py
py_packages/ipydrawio-export/src/ipydrawio_export/etc/: ipydrawio-export.json
py_packages/ipydrawio-export/src/ipydrawio_export/etc/jupyter_notebook_config.d/: ipydrawio-export.json
py_packages/ipydrawio-export/src/ipydrawio_export/tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_meta.py  test_pdf.py  test_provision.py  test_serverextension.py
py_packages/ipydrawio-export/src/ipydrawio_export/tests/fixtures/: empty.dio  empty.ipynb
py_packages/ipydrawio/src/ipydrawio/: __init__.py  _version.py  constants.py  schema.py  widget_diagram.py
py_packages/ipydrawio/src/ipydrawio/ext/: README.md
py_packages/ipydrawio/src/ipydrawio/tests/: __init__.py  conftest.py  test_labextensions.py  test_schema.py  test_widgets.py
py_packages/jupyter-drawio-export/: MANIFEST.in  README.md  setup.cfg  setup.py
py_packages/jupyter-drawio-export/src/jupyter_drawio_export/: __init__.py  _version.py  app.py  constants.py  handlers.py  manager.py  serverextension.py
py_packages/jupyter-drawio-export/src/jupyter_drawio_export/etc/: jupyter-drawio-export.json
py_packages/jupyter-drawio-export/src/jupyter_drawio_export/tests/: conftest.py  test_pdf.py
py_packages/jupyter-drawio-export/src/jupyter_drawio_export/tests/fixtures/: empty.ipynb
scripts/: atest.py  drawio_export_demo.py  integrity.py  project.py  tag.py  upload.py
