# Copyright 2021 ipydrawio contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = ipydrawio-export
description = PDF export for Drawio diagrams in JupyterLab
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/ipydrawio
author = ipydrawio Contributors
author_email = ripxl@example.com
license = Apache-2.0
license_file = LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/deathbeds/ipydrawio/issues
    Changelog = https://github.com/deathbeds/ipydrawio/blob/master/CHANGELOG.md
    Coverage = https://app.codecov.io/gh/deathbeds/ipydrawio
    Source Code = https://github.com/deathbeds/ipydrawio
classifiers =
    Development Status :: 4 - Beta
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Multimedia :: Graphics :: Presentation

[options]
python_requires = >=3.6
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    ipydrawio >=1.0.2
    pillow
    pypdf2
    requests_cache

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    jupyter-ipydrawio-export = ipydrawio_export.app:main

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88
ignore = E203

[tool:pytest]
junit_family=xunit2
script_launch_mode = subprocess
addopts =
    -vv
    --tb long
    --pyargs ipydrawio_export
    --cov ipydrawio_export
    --cov-branch
    --cov-report term-missing:skip-covered
    --cov-report html

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
