[metadata]
name = ipydrawio
description = Draw.io Diagrams as Jupyter Widgets
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/ipydrawio
author = ipydrawio Contributors
author_email = ripxl@example.com
license = Apache-2.0
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[options]
python_requires = >=3.6
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jupyterlab ==3.*
    ipywidgets >=7.6
    jupyterlab_widgets >=1
    lxml

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88
ignore = E203

[tool:pytest]
junit_family=xunit2
addopts =
    -vv
    --tb long
    --pyargs ipydrawio
    --cov ipydrawio
    --cov-report term-missing:skip-covered

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
