[metadata]
name = jupyter-drawio-export
description = PDF export for Drawio diagrams in Jupyter Notebook and JupyterLab
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/jupyterlab-drawio
author = jupyterlab-drawio Contributors
author_email = ripxl@example.com
license = Apache-2.0
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[options]
python_requires = >=3.6
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jupyterlab
    lxml
    notebook >=4.3.1
    pillow
    pypdf2
    requests_cache

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    jupyter-drawio-export = jupyter_drawio_export.app:main

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88
ignore = E203

[tool:pytest]
junit_family=xunit2
addopts =
    -vv
    --tb long
    --pyargs jupyter_drawio_export
    --cov jupyter_drawio_export
    --cov-report term-missing:skip-covered

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
